--- a/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit App.xcscheme
+++ b/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit App.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/seximal">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D59717822688C63A00A84BA9"
@@ -65,7 +63,7 @@
             BlueprintName = "seximal WatchKit App"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/seximal">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D59717822688C63A00A84BA9"
@@ -84,16 +80,7 @@
             BlueprintName = "seximal WatchKit App"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D59717822688C63A00A84BA9"
-            BuildableName = "seximal WatchKit App.app"
-            BlueprintName = "seximal WatchKit App"
-            ReferencedContainer = "container:seximal.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
