--- a/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit Extension.xcscheme
+++ b/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit Extension.xcscheme
@@ -68,10 +68,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/seximal">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D597178D2688C63D00A84BA9"
@@ -79,7 +77,7 @@
             BlueprintName = "seximal WatchKit Extension"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -87,10 +85,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/seximal">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D597178D2688C63D00A84BA9"
@@ -98,16 +94,7 @@
             BlueprintName = "seximal WatchKit Extension"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D597178D2688C63D00A84BA9"
-            BuildableName = "seximal WatchKit Extension.appex"
-            BlueprintName = "seximal WatchKit Extension"
-            ReferencedContainer = "container:seximal.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
