--- a/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit App.xcscheme
+++ b/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit App.xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/seximal">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D59717822688C63A00A84BA9"
@@ -63,7 +65,7 @@
             BlueprintName = "seximal WatchKit App"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/seximal">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D59717822688C63A00A84BA9"
@@ -80,7 +84,16 @@
             BlueprintName = "seximal WatchKit App"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D59717822688C63A00A84BA9"
+            BuildableName = "seximal WatchKit App.app"
+            BlueprintName = "seximal WatchKit App"
+            ReferencedContainer = "container:seximal.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
