--- a/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit Extension.xcscheme
+++ b/seximal.xcodeproj/xcshareddata/xcschemes/seximalWatch WatchKit Extension.xcscheme
@@ -68,8 +68,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/seximal">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D597178D2688C63D00A84BA9"
@@ -77,7 +79,7 @@
             BlueprintName = "seximal WatchKit Extension"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -85,8 +87,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/seximal">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D597178D2688C63D00A84BA9"
@@ -94,7 +98,16 @@
             BlueprintName = "seximal WatchKit Extension"
             ReferencedContainer = "container:seximal.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D597178D2688C63D00A84BA9"
+            BuildableName = "seximal WatchKit Extension.appex"
+            BlueprintName = "seximal WatchKit Extension"
+            ReferencedContainer = "container:seximal.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
